bug 56936 Can't copy Japanese string from emacs by mouse (check in for katakai@japan.sun.com) r=ftang sr=blizzard a=asa@mozilla.org